<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.actividad2.ActividadPrincipal" >

    <EditText
        android:id="@+id/txtNum1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/cadIntrNum"
        android:inputType="numberDecimal" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/txtNum2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/cadIntrNum"
        android:inputType="numberDecimal" />

    <RadioGroup
        android:id="@+id/rGop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RadioButton
            android:id="@+id/radSuma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/cadRadS" />

        <RadioButton
            android:id="@+id/radResta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cadRadResta" />

        <RadioButton
            android:id="@+id/radMult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cadRadMul" />

        <RadioButton
            android:id="@+id/radDiv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cadRadDiv" />
    </RadioGroup>

    <Button
        android:id="@+id/btCalcular"
        android:layout_width="281dp"
        android:layout_height="wrap_content"
        android:onClick="calcularNumeros"
        android:text="@string/cadButCal" />

</LinearLayout>
